--- a/composer.json
+++ b/composer.json
@@ -11,16 +11,17 @@
         "php": "^7.2.5|^8.0",
         "fideloper/proxy": "^4.4",
         "intervention/image": "^2.5",
-        "laravel/framework": "^6.20",
+        "laravel/framework": "^8.0",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "1.2.0"
+        "laravel/ui": "^3.0",
+        "guzzlehttp/guzzle": "^7.0.1"
     },
     "require-dev": {
-        "facade/ignition": "^1.16.4",
+        "facade/ignition": "^2.3.6",
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.5.8|^9.3.3"
+        "nunomaduro/collision": "^5.0",
+        "phpunit/phpunit": "^9.0"
     },
     "config": {
         "optimize-autoloader": true,
