index新バージョン

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/css/common.css": "/css/common.css"
+    "/css/common.css": "/css/common.css",
+    "/css/index.css": "/css/index.css"
 }
