--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,5 +3,6 @@
     "/css/app.css": "/css/app.css",
     "/css/common.css": "/css/common.css",
     "/css/index.css": "/css/index.css",
-    "/css/login.css": "/css/login.css"
+    "/css/login.css": "/css/login.css",
+    "/css/admin.css": "/css/admin.css"
 }
