SearchControllerのリファクタとsearchのviewのデザイン変更

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,5 +4,6 @@
     "/css/common.css": "/css/common.css",
     "/css/index.css": "/css/index.css",
     "/css/login.css": "/css/login.css",
-    "/css/admin.css": "/css/admin.css"
+    "/css/admin.css": "/css/admin.css",
+    "/css/search.css": "/css/search.css"
 }
